[nacl-sdk] Fix nacl sdk example on windows.

BUG=None
TEST=None
R=sbc@chromium.org
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_nacl_sdk;master.tryserver.chromium.mac:mac_nacl_sdk;master.tryserver.chromium.win:win_nacl_sdk
BUG=646185

Review-Url: https://codereview.chromium.org/2342353003
Cr-Commit-Position: refs/heads/master@{#419332}