native_client_sdk/src/examples/api/vpn_provider/vpn_provider_helper.cc
@@ -9,6 +9,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "ppapi/cpp/var_dictionary.h"
 
+#ifdef WIN32
+#  undef PostMessage
+#endif
+
 VpnProviderHelper::VpnProviderHelper(pp::Instance* instance)
     : instance_(instance),
       thread_(pp::InstanceHandle(instance)),
